<resources>
    <string name="app_name">PopCornFactory</string>
    <string name="wellcom">Welcome to Popcorn Factory, home of the best series and movies. Just lay donw, make some popcorn and enjoy!</string>
    <string name="getmein">GET ME IN!</string>
    <string name="series">Series</string>
    <string name="movies">Movies</string>
    <string name="buy_my_tickets">BUY MY TICKETS!</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="screen">Screen</string>
    <string name="disponible">Disponible</string>
    <string name="no_disponible">No Disponible</string>
    <string name="tu_eleccino">Tu eleccino</string>
    <string name="tu_eleccion">Tu elecion</string>
    <string name="confirm">confirm!</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="your_selection">Your selection</string>
</resources>