<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black"

    tools:context=".SeatSelectionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titutlo"
            android:text=""
            android:textAllCaps="true"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/s1"
            style="@style/MiRadioButon"
            android:text="@string/_1"/>
        <RadioButton
            android:id="@+id/s2"
            style="@style/MiRadioButon"
            android:text="@string/_2"/>
        <RadioButton
            android:id="@+id/s3"
            style="@style/MiRadioButon"
            android:text="@string/_3"/>
        <RadioButton
            android:id="@+id/s4"
            style="@style/MiRadioButon"
            android:text="@string/_4"/>
        <RadioButton
            android:id="@+id/s5"
            style="@style/MiRadioButon"
            android:text="@string/_5"/>

        
    </RadioGroup>
    <RadioGroup
        android:id="@+id/r2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/s6"
            style="@style/MiRadioButon"
            android:text="@string/_6"/>
        <RadioButton
            android:id="@+id/s7"
            style="@style/MiRadioButon"
            android:text="@string/_7"/>
        <RadioButton
            android:id="@+id/s8"
            style="@style/MiRadioButon"
            android:text="@string/_8"/>
        <RadioButton
            android:id="@+id/s9"
            style="@style/MiRadioButon"
            android:text="@string/_9"/>
        <RadioButton
            android:id="@+id/s10"
            style="@style/MiRadioButon"
            android:text="@string/_10"/>


    </RadioGroup>
    <RadioGroup
        android:id="@+id/r3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/s11"
            style="@style/MiRadioButon"
            android:text="@string/_11"/>
        <RadioButton
            android:id="@+id/s12"
            style="@style/MiRadioButon"
            android:text="@string/_12"/>
        <RadioButton
            android:id="@+id/s13"
            style="@style/MiRadioButon"
            android:text="@string/_13"/>
        <RadioButton
            android:id="@+id/s14"
            style="@style/MiRadioButon"
            android:text="@string/_14"/>
        <RadioButton
            android:id="@+id/s15"
            style="@style/MiRadioButon"
            android:text="@string/_15"/>


    </RadioGroup>
    <RadioGroup
        android:id="@+id/r4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/s16"
            style="@style/MiRadioButon"
            android:text="@string/_16"/>
        <RadioButton
            android:id="@+id/s17"
            style="@style/MiRadioButon"
            android:text="@string/_17"/>
        <RadioButton
            android:id="@+id/s18"
            style="@style/MiRadioButon"
            android:text="@string/_18"/>
        <RadioButton
            android:id="@+id/s19"
            style="@style/MiRadioButon"
            android:text="@string/_19"/>
        <RadioButton
            android:id="@+id/s20"
            style="@style/MiRadioButon"
            android:text="@string/_20"/>


    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/screen"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="32dp"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/radio_normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/available"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/radio_disable"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/radio_selected"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/your_selection"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFD501"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

</LinearLayout>